<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context=".ProfilePage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/foto_profil"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/foto_profil"
            android:layout_marginVertical="32dp"
           />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_mahasiswa"
            android:textColor="@color/text_grey"
            android:textAlignment="center"
            android:textSize="32dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:layout_marginVertical="12dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nim_mahasiswa"
                android:textColor="@color/text_grey"
                android:textSize="16dp"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kelas_mahasiswa"
                android:textColor="@color/text_grey"
                android:textSize="16dp"
                android:textAlignment="center"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>